# libsphinx

./: .gitmodules  azure-pipelines.yml
cpp/: CMakeLists.txt
cpp/jni/: CMakeLists.txt
cpp/jni/src/: NativeOpaque.c  NativePake.c  NativeSphinx.c
cpp/libsphinx/: CMakeLists.txt
cpp/libsphinx/opaque/: CMakeLists.txt
cpp/libsphinx/opaque/include/: opaque.h
cpp/libsphinx/opaque/src/: opaque.c
cpp/libsphinx/pake/: CMakeLists.txt
cpp/libsphinx/pake/src/: pake.c
cpp/libsphinx/sphinx/: CMakeLists.txt
cpp/libsphinx/sphinx/src/: sphinx.c
cpp/libsphinx/sphinx/test/: test.c
java/: .gitignore  build.gradle.kts  settings.gradle
java/sphinx/: .gitignore  build.gradle.kts
java/sphinx-jar-test/: build.gradle.kts
java/sphinx-jar-test/src/test/kotlin/com/volkhart/sphinx/: NativeSphinxTest.kt
java/sphinx/src/main/java/com/volkhart/sphinx/: DeleteFileShutdownHook.java  Initial.java  NativeLoader.java  NativeSphinx.java  Sphinx.java  package-info.java
java/sphinx/src/test/kotlin/com/volkhart/sphinx/: DeleteFileShutdownHookTest.kt  NativeLoaderTest.kt  NativeSphinxTest.kt
